--- a/L_10_Time_Series_Analysis.ipynb
+++ b/L_10_Time_Series_Analysis.ipynb
@@ -27,7 +27,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"images/CAIDASlogo.png\" style=\"width:20%; float:left;\" />"
+    "<img src=\"https://raw.githubusercontent.com/vhaus63/ids_data/main/CAIDASlogo.png\" style=\"width:20%; float:left;\" />"
    ]
   },
   {
@@ -2031,7 +2031,7 @@
     }
    },
    "source": [
-    "<img src='images/d3.png' style='width:80%; float:left;' />"
+    "<img src=\"https://github.com/GuntherGust/tds2_data/blob/main/images/d3.png?raw=true\" style=\"width:80%; float:left;\" />\n"
    ]
   }
  ],
